add the survey list and survey details from database
